# zk-agent

./: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
docs/: PLAN.md
scripts/: classifier.py  config.py  detector.py  env.py  heptabase_client.py  init_wizard.py  journal.py  linker.py  llm.py  metadata_generator.py  setup.py  storage.py  storage_heptabase.py  zk_agent.py
src/zk_agent/: __init__.py  __main__.py  classifier.py  cli.py  context.py  detector.py  env.py  heptabase_client.py  init_wizard.py  llm.py  metadata_generator.py  note_types.py  oauth.py  scope.py  setup.py  storage.py  storage_heptabase.py  storage_obsidian.py  zk_agent.py
templates/: fleeting.md  literature.md  permanent.md
tests/: conftest.py  test_classifier.py  test_detector.py
tests/fixtures/: sample_insights.json
