[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zk-agent"
version = "0.1.0"
description = "Classify conversation insights into Zettelkasten notes and save to your note-taking app"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Amelie Yeh" },
]
keywords = ["zettelkasten", "ai", "note-taking", "classification", "heptabase", "obsidian", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Text Processing :: General",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "mcp>=1.27.0",
]

[project.urls]
Homepage = "https://github.com/amelieyeh/zk-agent"
Repository = "https://github.com/amelieyeh/zk-agent"
Issues = "https://github.com/amelieyeh/zk-agent/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
zk-agent = "zk_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
